Minor fix for project#show status panes on Firefox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,7 @@ section {
 }
 
 .status-pane {
-  width: 31.4%;
+  width: 31.2%;
   padding: 1%;
   min-height: 300px;
 }
